--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+permissions:
+  checks: write
+
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -31,3 +34,10 @@ jobs:
           name: surefire-test-results
           path: |
             target/surefire-reports/*.xml
+
+      - name: Test report
+        uses: dorny/test-reporter@v1
+        with:
+          name: Maven tests
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
