detailed_summary: true

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,4 @@ jobs:
         with:
           report_paths: target/surefire-reports/*.xml
           check_name: Maven tests
+          detailed_summary: true
